# jobhunter

./: .gitguardian.yaml  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SYSTEM_DESIGN.md  TODO.md  project-report.html
jobhunter/backend/: .dockerignore  .env.example  .env.staging.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  railway.worker.toml  start.sh
jobhunter/backend/alembic/: env.py
jobhunter/backend/alembic/versions/: 001_initial.py  002_constraints_and_indexes.py  003_invite_codes.py  004_admin_role.py  005_admin_improvements.py  006_performance_indexes.py  007_pending_actions.py  008_email_verified.py  009_outreach_variant.py  010_resume_bullets.py  011_fit_score_tips.py  012_plan_tier.py  013_company_signals.py  014_interview_prep.py  015_job_postings.py  016_analytics_insights.py  017_company_notes_and_application_stage.py  018_add_application_stage_constraint.py  019_add_subscription_status.py  020_add_waitlist.py  021_add_api_usage.py  022_add_waitlist_status.py  023_add_onboarding_and_tour.py  024_add_incidents.py  025_add_last_seen_at.py  026_add_funding_signals.py  027_cron_coordinator_indexes.py  028_add_password_changed_at.py  029_lowercase_existing_emails.py
jobhunter/backend/app/: config.py  dependencies.py  loadtest_guard.py  main.py  plans.py  rate_limit.py  worker.py
jobhunter/backend/app/api/: admin.py  analytics.py  apply.py  approvals.py  auth.py  candidates.py  companies.py  contacts.py  health.py  incidents.py  interview.py  invites.py  outreach.py  plans.py  scout.py  waitlist.py  webhooks.py  ws.py
jobhunter/backend/app/events/: bus.py  handlers.py
jobhunter/backend/app/graphs/: analytics_pipeline.py  apply_pipeline.py  company_research.py  interview_prep.py  outreach.py  resume_pipeline.py  scout_pipeline.py
jobhunter/backend/app/infrastructure/: database.py  dossier_cache.py  github_client.py  hunter_client.py  mock_hunter_client.py  mock_resend_client.py  newsapi_client.py  openai_client.py  protocols.py  redis_client.py  resend_client.py  storage.py  url_scraper.py  websocket_manager.py
jobhunter/backend/app/middleware/: error_handler.py  logging_config.py  metrics.py  request_id.py  security_headers.py  tenant.py
jobhunter/backend/app/models/: __init__.py  analytics.py  audit.py  base.py  billing.py  candidate.py  company.py  company_note.py  contact.py  enums.py  funding_signal.py  incident.py  insight.py  interview.py  (+7 more)
jobhunter/backend/scripts/: backup-db.sh  check_env.py  reset_password.py  restore-db.sh  seed_dev_data.py  seed_loadtest_data.py  seed_mock_users.py
jobhunter/backend/tests/: conftest.py  test_admin.py  test_admin_api_extended.py  test_admin_integration2.py  test_admin_service_unit.py  test_admin_v2.py  test_analytics_agent.py  test_analytics_graph2.py  test_analytics_graph_nodes.py  test_analytics_integration.py  test_analytics_service_unit.py  test_analytics_uses_cheap_model.py  test_api_usage.py  test_apply.py  test_apply_api_extended.py  test_apply_graph2.py  test_apply_graph_nodes.py  test_apply_integration.py  test_apply_integration2.py  test_approval_service_unit.py  test_approval_service_unit2.py  test_approvals.py  test_approvals_integration.py  test_approvals_integration2.py  test_auth.py  test_auth_integration.py  test_auth_service_full.py  test_auth_service_unit.py  test_billing.py  test_billing_service_unit2.py  test_billing_webhooks.py  test_candidates_api.py  test_candidates_api_extended.py  test_candidates_integration.py  test_circuit_breaker.py  test_companies.py  test_companies_integration.py  test_companies_integration2.py  test_company_research_graph.py  test_company_research_graph2.py  (+98 more)
(+335 files in other folders)
